--- a/HackingTheFuture/src/main/resources/com/example/hackingthefuture/Login.fxml
+++ b/HackingTheFuture/src/main/resources/com/example/hackingthefuture/Login.fxml
@@ -10,32 +10,32 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hackingthefuture.LoginController">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hackingthefuture.LoginController">
    <children>
-      <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+      <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0">
           <children>
-              <AnchorPane prefHeight="400.0" prefWidth="162.0" style="-fx-background-color: #bbc6e6;">
+              <AnchorPane prefHeight="600.0" prefWidth="250.0" style="-fx-background-color: #bbc6e6;">
                   <children>
-                      <ImageView fitHeight="249.0" fitWidth="250.0" layoutX="-0.8" layoutY="76.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="58.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="77.0">
+                      <ImageView fitHeight="249.0" fitWidth="250.0" layoutX="14.0" layoutY="131.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="220.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="-13.0" AnchorPane.topAnchor="131.0">
                           <image>
                               <Image url="@login%20logo.png" />
                           </image>
                   </ImageView>
                   </children>
               </AnchorPane>
-              <AnchorPane prefHeight="400.0" prefWidth="350.0" style="-fx-background-color: ffffff;">
+              <AnchorPane prefHeight="600.0" prefWidth="550.0" style="-fx-background-color: ffffff;">
                   <children>
-                      <TextField fx:id="tf_username" layoutX="50.0" layoutY="142.0" prefHeight="26.0" prefWidth="250.0" promptText="Email/Username" />
-                      <Button fx:id="button_signup" layoutX="107.0" layoutY="282.0" mnemonicParsing="false" onAction="#sign" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Sign Up" textFill="#48478c" />
-                      <Label layoutX="50.0" layoutY="286.0" text="New User?" textFill="GREY" />
-                      <Label layoutX="104.0" layoutY="78.0" text="User Login" textFill="#48478c">
+                      <TextField fx:id="tf_username" layoutX="143.0" layoutY="152.0" prefHeight="26.0" prefWidth="250.0" promptText="Email/Username" />
+                      <Button fx:id="button_signup" layoutX="195.0" layoutY="392.0" mnemonicParsing="false" onAction="#sign" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Sign Up" textFill="#48478c" />
+                      <Label layoutX="108.0" layoutY="397.0" text="New User?" textFill="GREY" />
+                      <Label layoutX="180.0" layoutY="60.0" text="User Login" textFill="#48478c">
                           <font>
                               <Font size="30.0" />
                           </font>
                       </Label>
-                      <Button fx:id="button_forgotpw" layoutX="196.0" layoutY="282.0" mnemonicParsing="false" onAction="#forgot" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Forgot Password?" textFill="#48478c" />
-                  <PasswordField fx:id="pf_password" layoutX="49.0" layoutY="187.0" prefHeight="26.0" prefWidth="250.0" promptText="Password" />
-                  <Button fx:id="button_login" layoutX="49.0" layoutY="241.0" mnemonicParsing="false" onAction="#login" prefHeight="26.0" prefWidth="250.0" style="-fx-background-color: #48478c; -fx-cursor: hand;" text="LOGIN" textFill="WHITE" />
+                      <Button fx:id="button_forgotpw" layoutX="342.0" layoutY="392.0" mnemonicParsing="false" onAction="#forgot" prefWidth="149.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Forgot Password?" textFill="#48478c" />
+                  <PasswordField fx:id="pf_password" layoutX="143.0" layoutY="219.0" prefHeight="26.0" prefWidth="250.0" promptText="Password" />
+                  <Button fx:id="button_login" layoutX="150.0" layoutY="285.0" mnemonicParsing="false" onAction="#login" prefHeight="26.0" prefWidth="250.0" style="-fx-background-color: #48478c; -fx-cursor: hand;" text="LOGIN" textFill="WHITE" />
                   </children>
             </AnchorPane>
           </children>
