--- a/HackingTheFuture/src/main/resources/com/example/hackingthefuture/ForgotPasswordVerify.fxml
+++ b/HackingTheFuture/src/main/resources/com/example/hackingthefuture/ForgotPasswordVerify.fxml
@@ -9,40 +9,42 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hackingthefuture.ForgotPasswordVerify">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hackingthefuture.ForgotPasswordVerify">
    <children>
-      <HBox prefHeight="400.0" prefWidth="600.0">
+      <HBox prefHeight="600.0" prefWidth="800.0">
          <children>
-            <AnchorPane prefHeight="400.0" prefWidth="162.0" style="-fx-background-color: #bbc6e6;">
+            <AnchorPane prefHeight="477.0" prefWidth="288.0" style="-fx-background-color: #bbc6e6;">
                <children>
-                  <ImageView fitHeight="249.0" fitWidth="250.0" layoutX="-0.8" layoutY="76.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="58.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="77.0">
+                  <ImageView fitHeight="249.0" fitWidth="250.0" layoutX="39.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="175.0" AnchorPane.leftAnchor="39.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="176.0">
                      <image>
                         <Image url="@login%20logo.png" />
                      </image>
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane prefHeight="400.0" prefWidth="350.0" style="-fx-background-color: ffffff;">
+            <AnchorPane prefHeight="480.0" prefWidth="528.0" style="-fx-background-color: ffffff;">
                <children>
-                  <TextField fx:id="tf_vcode" layoutX="49.0" layoutY="187.0" prefHeight="26.0" prefWidth="250.0" promptText="Enter Verification Code" />
-                  <Label layoutX="49.0" layoutY="78.0" text="Verification Code" textFill="#48478c">
+                  <TextField fx:id="tf_vcode" layoutX="81.0" layoutY="245.0" prefHeight="26.0" prefWidth="250.0" promptText="Enter Verification Code" />
+                  <Label layoutX="93.0" layoutY="59.0" text="Verification Code" textFill="#48478c">
                      <font>
                         <Font size="30.0" />
                      </font>
                   </Label>
-                  <Button fx:id="button_forgotpw" layoutX="96.0" layoutY="283.0" mnemonicParsing="false" onAction="#back" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Use another Email Address" textFill="#48478c" />
-                  <Button fx:id="button_verify" layoutX="49.0" layoutY="241.0" mnemonicParsing="false" onAction="#submit" prefHeight="26.0" prefWidth="250.0" style="-fx-background-color: #48478c; -fx-cursor: hand;" text="VERIFY" textFill="WHITE" />
-                  <Label layoutX="49.0" layoutY="124.0" text="We have sent a verification code">
+                  <Button fx:id="button_forgotpw" layoutX="286.0" layoutY="477.0" mnemonicParsing="false" onAction="#back" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Use another Email Address" textFill="#48478c" />
+                  <Button fx:id="button_verify" layoutX="82.0" layoutY="310.0" mnemonicParsing="false" onAction="#verify" prefHeight="26.0" prefWidth="250.0" style="-fx-background-color: #48478c; -fx-cursor: hand;" text="VERIFY" textFill="WHITE" />
+                  <Label layoutX="79.0" layoutY="152.0" text="Click &quot;Get&quot; to get the verification code">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <Label layoutX="49.0" layoutY="146.0" text="to your email.">
+                  <Label layoutX="82.0" layoutY="183.0" text="in your email.">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Label>
+                  <Label layoutX="82.0" layoutY="385.0" text="Didn't received email?" />
+                  <Button fx:id="Resend" layoutX="82.0" layoutY="419.0" mnemonicParsing="false" onAction="#resend" style="-fx-background-color: #48478c;" text="Resend" textFill="WHITE" />
+                  <Button fx:id="get" layoutX="365.0" layoutY="162.0" mnemonicParsing="false" onAction="#Get" style="-fx-background-color: #48478c;" text="Get" textFill="WHITE" />
                </children>
             </AnchorPane>
          </children>
