--- a/HackingTheFuture/src/main/resources/com/example/hackingthefuture/5Shortest.fxml
+++ b/HackingTheFuture/src/main/resources/com/example/hackingthefuture/5Shortest.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #BCE5AF;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hackingthefuture.display5EuclideanDistance">
    <children>
-      <Button fx:id="back" accessibleRole="IMAGE_VIEW" mnemonicParsing="false" onAction="#onBackButtonClicked" prefHeight="88.0" prefWidth="120.0" style="-fx-background-color: #CFEDC6;">
+      <Button fx:id="back" accessibleRole="IMAGE_VIEW" mnemonicParsing="false" onAction="#onBackButtonClicked" prefHeight="88.0" prefWidth="120.0" style="-fx-background-color: #A0DB8E;">
          <graphic>
             <ImageView fitHeight="66.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
                     <image>
@@ -31,9 +31,9 @@
          <font>
             <Font name="Times New Roman" size="25.0" />
          </font></TextArea>
-      <Button fx:id="booking" layoutX="686.0" layoutY="530.0" mnemonicParsing="false" onAction="#setBooking" prefHeight="70.0" prefWidth="126.0" style="-fx-background-color: #CFEDC6;" text="Make a booking">
+      <Button fx:id="booking" layoutX="669.0" layoutY="530.0" mnemonicParsing="false" onAction="#setBooking" prefHeight="70.0" prefWidth="143.0" style="-fx-background-color: #A0DB8E;" text="Make a booking">
          <font>
-            <Font name="Arial Black" size="12.0" />
+            <Font name="Arial Black" size="14.0" />
          </font>
       </Button>
       <ImageView fitHeight="205.0" fitWidth="239.0" layoutX="-14.0" layoutY="370.0" pickOnBounds="true" preserveRatio="true">
