--- a/HackingTheFuture/src/main/resources/com/example/hackingthefuture/Parent.fxml
+++ b/HackingTheFuture/src/main/resources/com/example/hackingthefuture/Parent.fxml
@@ -58,7 +58,7 @@
             <Font name="System Bold" size="35.0" />
          </font>
       </Label>
-      <Button layoutX="635.0" layoutY="140.0" mnemonicParsing="false" onAction="#viewOtherProfile" prefHeight="29.0" prefWidth="36.0" style="-fx-background-color: #BCE5AF;">
+      <Button layoutX="635.0" layoutY="140.0" mnemonicParsing="false" onAction="#viewOtherProfile" prefHeight="29.0" prefWidth="36.0" style="-fx-background-color: #A0DB8E;">
          <graphic>
             <ImageView fitHeight="38.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
