--- a/HackingTheFuture/src/main/resources/com/example/hackingthefuture/Leaderboard.fxml
+++ b/HackingTheFuture/src/main/resources/com/example/hackingthefuture/Leaderboard.fxml
@@ -70,7 +70,7 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="316.0" layoutY="160.0" prefHeight="34.0" prefWidth="66.0" text="User" textFill="#7e57c2">
+      <Label layoutX="316.0" layoutY="160.0" prefHeight="34.0" prefWidth="116.0" text="Student" textFill="#7e57c2">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
