--- a/HackingTheFuture/src/main/resources/com/example/hackingthefuture/Parent.fxml
+++ b/HackingTheFuture/src/main/resources/com/example/hackingthefuture/Parent.fxml
@@ -58,7 +58,7 @@
             <Font name="System Bold" size="35.0" />
          </font>
       </Label>
-      <Button layoutX="635.0" layoutY="140.0" mnemonicParsing="false" onAction="#viewOtherProfile" prefHeight="29.0" prefWidth="36.0" style="-fx-background-color: #A0DB8E;">
+      <Button layoutX="623.0" layoutY="140.0" mnemonicParsing="false" onAction="#viewOtherProfile" prefHeight="29.0" prefWidth="36.0" style="-fx-background-color: #A0DB8E;">
          <graphic>
             <ImageView fitHeight="38.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -91,5 +91,19 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Button>
+      <Button fx:id="Discussion" layoutX="690.0" layoutY="136.0" mnemonicParsing="false" onAction="#Discussion" prefHeight="68.0" prefWidth="92.0" style="-fx-background-color: #BCE5AF;">
+         <graphic>
+            <ImageView fitHeight="100.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../Users/SCSM11/Downloads/chatroom-removebg-preview.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Label layoutX="707.0" layoutY="242.0" text="Discussion" textFill="#405738">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
