--- a/HackingTheFuture/src/main/resources/com/example/hackingthefuture/Student.fxml
+++ b/HackingTheFuture/src/main/resources/com/example/hackingthefuture/Student.fxml
@@ -48,6 +48,20 @@
             <Font name="System Bold" size="35.0" />
          </font>
       </Label>
+      <Label layoutX="696.0" layoutY="380.0" prefHeight="21.0" prefWidth="92.0" text="Discussion" textFill="#756d7d">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <Button fx:id="Discussion" layoutX="680.0" layoutY="269.0" mnemonicParsing="false" onAction="#Discussion" prefHeight="68.0" prefWidth="92.0" style="-fx-background-color: #C2B2D2;">
+         <graphic>
+            <ImageView fitHeight="100.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../Users/SCSM11/Downloads/chatroom-removebg-preview.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
       <Button layoutX="14.0" layoutY="16.0" mnemonicParsing="false" onAction="#logoutBTN" prefHeight="60.0" prefWidth="47.0" style="-fx-background-color: #C2B2D2;">
          <graphic>
             <ImageView fitHeight="73.0" fitWidth="66.0" pickOnBounds="true" preserveRatio="true">
@@ -74,7 +88,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button alignment="TOP_CENTER" contentDisplay="TOP" layoutX="481.0" layoutY="238.0" mnemonicParsing="false" onAction="#viewQuizBTN" prefHeight="157.0" prefWidth="204.0" style="-fx-background-color: #9F9EA1;" text="View Quiz" textAlignment="CENTER" textFill="#756d7d">
+      <Button alignment="TOP_CENTER" contentDisplay="TOP" layoutX="462.0" layoutY="238.0" mnemonicParsing="false" onAction="#viewQuizBTN" prefHeight="157.0" prefWidth="204.0" style="-fx-background-color: #9F9EA1;" text="View Quiz" textAlignment="CENTER" textFill="#756d7d">
          <graphic>
             <ImageView fitHeight="125.0" fitWidth="141.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -86,7 +100,7 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Button>
-      <Button alignment="TOP_CENTER" contentDisplay="TOP" layoutX="221.0" layoutY="238.0" mnemonicParsing="false" onAction="#viewEventBTN" prefHeight="160.0" prefWidth="214.0" style="-fx-background-color: #9F9EA1;" text="View Event" textAlignment="CENTER" textFill="#756d7d">
+      <Button alignment="TOP_CENTER" contentDisplay="TOP" layoutX="213.0" layoutY="238.0" mnemonicParsing="false" onAction="#viewEventBTN" prefHeight="160.0" prefWidth="214.0" style="-fx-background-color: #9F9EA1;" text="View Event" textAlignment="CENTER" textFill="#756d7d">
          <graphic>
             <ImageView fitHeight="125.0" fitWidth="172.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -103,7 +117,7 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <Button alignment="TOP_CENTER" contentDisplay="TOP" layoutX="350.0" layoutY="426.0" mnemonicParsing="false" onAction="#viewLeaderboardBTN" prefHeight="160.0" prefWidth="214.0" style="-fx-background-color: #9F9EA1;" text="View Leaderboard" textAlignment="CENTER" textFill="#756d7d">
+      <Button alignment="TOP_CENTER" contentDisplay="TOP" layoutX="328.0" layoutY="408.0" mnemonicParsing="false" onAction="#viewLeaderboardBTN" prefHeight="160.0" prefWidth="214.0" style="-fx-background-color: #9F9EA1;" text="View Leaderboard" textAlignment="CENTER" textFill="#756d7d">
          <graphic>
             <ImageView fitHeight="125.0" fitWidth="172.0" pickOnBounds="true" preserveRatio="true">
                <image>
