--- a/HackingTheFuture/src/main/resources/com/example/hackingthefuture/Discussion.fxml
+++ b/HackingTheFuture/src/main/resources/com/example/hackingthefuture/Discussion.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,7 +12,12 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #83BBC0;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hackingthefuture.DiscussionController">
    <children>
-      <Button fx:id="back" accessibleRole="IMAGE_VIEW" mnemonicParsing="false" onAction="#onBackButtonClicked" prefHeight="88.0" prefWidth="120.0" style="-fx-background-color: #BAD3D5;">
+      <ImageView fitHeight="173.0" fitWidth="157.0" layoutY="443.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../Users/SCSM11/Downloads/chatroom-removebg-preview.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="back" accessibleRole="IMAGE_VIEW" mnemonicParsing="false" onAction="#onBackButtonClicked" prefHeight="87.0" prefWidth="88.0" style="-fx-background-color: #BAD3D5;">
          <graphic>
             <ImageView fitHeight="66.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -23,20 +29,28 @@
             <Font size="24.0" />
          </font>
       </Button>
-      <Text layoutX="198.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DISCUSSION PAGE">
+      <Text layoutX="211.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DISCUSSION PAGE">
          <font>
-            <Font name="Copperplate Gothic Light" size="48.0" />
+            <Font size="48.0" />
          </font>
       </Text>
-      <TextArea fx:id="display" editable="false" layoutX="126.0" layoutY="88.0" prefHeight="405.0" prefWidth="620.0" style="-fx-background-color: #BAD3D5;" text="&#10;">
+      <TextArea fx:id="display" editable="false" layoutX="126.0" layoutY="88.0" prefHeight="408.0" prefWidth="620.0" text="&#10;">
          <font>
             <Font name="Times New Roman" size="25.0" />
          </font>
       </TextArea>
-      <Button fx:id="Insert" onAction="#Insert" layoutX="649.0" layoutY="512.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="86.0" style="-fx-background-color: #BAD3D5;" text="Send">
+      <Button fx:id="Insert" layoutX="650.0" layoutY="507.0" mnemonicParsing="false" onAction="#Insert" prefHeight="53.0" prefWidth="96.0" style="-fx-background-color: #BAD3D5;" text="Send">
          <font>
             <Font name="System Bold" size="18.0" />
          </font></Button>
-      <TextField fx:id ="message" layoutX="126.0" layoutY="507.0" prefHeight="53.0" prefWidth="494.0" promptText="Type Something.." style="-fx-background-color: #BAD3D5;" />
+      <TextField fx:id="message" layoutX="126.0" layoutY="507.0" prefHeight="53.0" prefWidth="494.0" promptText="Type Something.." style="-fx-background-color: #BAD3D5;">
+         <effect>
+            <ColorAdjust />
+         </effect></TextField>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="620.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../Users/SCSM11/Downloads/discussion1-removebg-preview.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
